# zenops

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  TODO.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/coverage/: SKILL.md  cov_diff.py  cov_preflight.sh  cov_rank.py
crates/safe-relative-path/: Cargo.toml
crates/safe-relative-path-macros/: Cargo.toml
crates/safe-relative-path-macros/src/: lib.rs
crates/safe-relative-path-validator/: Cargo.toml
crates/safe-relative-path/src/: buf.rs  error.rs  lib.rs
crates/safe-relative-path/tests/: basics.rs  macros.rs
crates/zenops-expand/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/zenops-expand/src/: expand_lookup.rs  lib.rs
crates/zenops-safe-relative-path/: CHANGELOG.md  Cargo.toml  README.md
crates/zenops-safe-relative-path-macros/: Cargo.toml  README.md
crates/zenops-safe-relative-path-macros/src/: lib.rs
crates/zenops-safe-relative-path-validator/: CHANGELOG.md  Cargo.toml  README.md
crates/zenops-safe-relative-path-validator/src/: lib.rs
crates/zenops-safe-relative-path/src/: buf.rs  error.rs  lib.rs  single_path_component.rs
crates/zenops-safe-relative-path/tests/: basics.rs  macros.rs
docs/: config.md  schema.md
scripts/: bump-helper.sh  prerelease.sh
src/: ansi.rs  config.rs  config_files.rs  doctor.rs  error.rs  git.rs  init.rs  lib.rs  line_prompter.rs  main.rs  output.rs  package_spec.rs  pkg_list.rs  pkg_manager.rs  prompt.rs  schema.rs
src/config/: condition.rs  condition_builtins.toml  defaults.toml  error.rs  git.rs  mod.rs  pkg.rs  pkg_config_files.rs  ssh.rs  stored_config_files.rs  stored_relative_path.rs  stored_single_path_component.rs  user.rs
src/config/pkg/: action.rs  detect.rs  error.rs  install.rs  mod.rs  tests.rs
src/config/pkgs/: bash-completion.toml  bashrc-chain.toml  brew-linux.toml  brew-macos.toml  brew-python.toml  cargo.toml  llvm.toml  local-bin.toml  sk.toml  starship.toml  zenops.toml  zsh-completions.toml
src/config/shell/: bash.rs  common.rs  error.rs  mod.rs  zsh.rs
src/config/ssh/: error.rs  mod.rs
src/config_files/: error.rs  mod.rs
src/git/: error.rs  mod.rs
src/import/: error.rs  mod.rs
src/init/: error.rs  mod.rs
src/output/: event.rs  json.rs  mod.rs  terminal.rs  tests.rs
src/package_spec/: brew.rs  cargo.rs
src/prompt/: error.rs  mod.rs
src/schema/: error.rs  mod.rs
src/utils/: mod.rs  which.rs
tests/: apply.rs  basics.rs  doctor.rs  git_bootstrap.rs  git_status.rs  import.rs  init.rs  json_output.rs  pkg_list.rs  repo_git.rs  schema.rs  shell_render.rs  ssh_git.rs  symlinks.rs  test_env.rs
tests/cross-platform/: README.md  matrix.py  run.py
tests/cross-platform/container/: common.py  runner.py
tests/cross-platform/container/scenarios/: basic.py
tests/cross-platform/container/steps/: 01_install.py  02_bootstrap.py  03_add_apply.py  04_import.py
tests/cross-platform/docker/: archlinux.Dockerfile  fedora.Dockerfile  ubuntu.Dockerfile
