[package]
name = "zenops"
description = "Declarative system configuration management for shell config and dotfiles."
readme = "README.md"
categories = ["command-line-utilities", "config"]
keywords = ["dotfiles", "config", "shell", "system"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.48"
env_logger = "0.11.8"
home = "0.5.11"
indexmap = { version = "2.11.4", features = ["serde"] }
log = "0.4.28"
zenops-safe-relative-path = { version = "0.1.0", path = "crates/zenops-safe-relative-path" }
semver = "1.0.27"
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml = { version = "0.9.7", features = ["preserve_order"] }
similar = "2.7.0"
xshell = "0.2.7"

[workspace]
resolver = "3"
members = ["crates/zenops-safe-relative-path", "crates/zenops-safe-relative-path-macros", "crates/zenops-safe-relative-path-validator"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Bjorn Ove Hay Andersen <bjrnove@gmail.com>"]

[workspace.dependencies]
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.17"

[dev-dependencies]
similar-asserts = "1.7.0"
tempfile = "3.23.0"
