[package]
name = "zenops"
description = "Declarative system configuration management for shell config and dotfiles."
readme = "README.md"
categories = ["command-line-utilities", "config"]
keywords = ["dotfiles", "config", "shell", "system"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
env_logger = "0.11.10"
home = "0.5.12"
indexmap = { version = "2.14.0", features = ["serde"] }
log = "0.4.29"
zenops-safe-relative-path.workspace = true
semver = "1.0.28"
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml = { version = "1.1.2", features = ["preserve_order"] }
similar = "3.1.0"
xshell = "0.2.7"

[workspace]
resolver = "3"
members = [
  "crates/zenops-safe-relative-path",
  "crates/zenops-safe-relative-path-macros",
  "crates/zenops-safe-relative-path-validator",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["Bjorn Ove Hay Andersen <bjrnove@gmail.com>"]

[workspace.dependencies]
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2.0.18"
zenops-safe-relative-path = { version = "0.2.1", path = "crates/zenops-safe-relative-path" }
zenops-safe-relative-path-macros = { version = "0.2.1", path = "crates/zenops-safe-relative-path-macros" }
zenops-safe-relative-path-validator = { version = "0.2.1", path = "crates/zenops-safe-relative-path-validator" }

[dev-dependencies]
similar-asserts = "2.0.0"
tempfile = "3.27.0"
