[package]
name = "safe-relative-path"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
relative-path = "2.0.1"
thiserror.workspace = true
safe-relative-path-macros = { path = "../safe-relative-path-macros" }
safe-relative-path-validator = { path = "../safe-relative-path-validator" }
serde.workspace = true
smol_str.workspace = true

