[package]
name = "zenops-expand"
description = "String newtype with `${name}` placeholders that must be expanded before use."
readme = "README.md"
categories = ["template-engine", "data-structures"]
keywords = ["template", "expand", "substitution", "interpolation"]
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
indexmap = { workspace = true, optional = true }

[features]
indexmap = ["dep:indexmap"]
schemars = ["dep:schemars"]

[dev-dependencies]
toml = "1.1.2"
