[package]
name = "zenops-safe-relative-path-macros"
description = "Compile-time `srpath!()` macro for `zenops-safe-relative-path`."
readme = "README.md"
categories = ["filesystem", "data-structures"]
keywords = ["path", "relative", "safe", "traversal"]
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
relative-path.workspace = true
zenops-safe-relative-path-validator.workspace = true
