[package]
name = "zenops-safe-relative-path-validator"
description = "Shared traversal-validation logic for `zenops-safe-relative-path`."
readme = "README.md"
categories = ["filesystem", "data-structures"]
keywords = ["path", "relative", "safe", "traversal"]
version = "0.4.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
relative-path.workspace = true
