[package]
name = "zenops-safe-relative-path"
description = "Relative path type that statically prevents `..` traversal."
readme = "README.md"
categories = ["filesystem", "data-structures"]
keywords = ["path", "relative", "safe", "traversal"]
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
relative-path = "2.0.1"
thiserror.workspace = true
zenops-safe-relative-path-macros.workspace = true
zenops-safe-relative-path-validator.workspace = true
serde.workspace = true
smol_str.workspace = true
